# financial_data_request

./: CMakeLists.txt  README.md  config.json
src/: curl_functions.cpp  curl_functions.hpp  main.cpp  trading_functions.cpp  trading_functions.hpp
